--- a/articles/applied-ai-services/form-recognizer/toc.yml
+++ b/articles/applied-ai-services/form-recognizer/toc.yml
@@ -44,12 +44,12 @@ items:
   - name: Create a Form Recognizer resource
     displayName: endpoint, key, portal
     href:  create-a-form-recognizer-resource.md
-  - name: Use SDKs or REST API | v3.0
-    displayName: documentAnalysisClient, document analysis client, polygon, boundingPolygon, begin_analyze_document, v3.0
-    href: how-to-guides/v3-0-sdk-rest-api.md
   - name: Migrate to Form Recognizer v3.0
     displayName: get started, confidence, bounding box, boundingBox, polygon, analyze, AnalyzeResult, train, build, sas, compose, copy
     href: v3-migration-guide.md
+  - name: Use SDKs or REST API | v3.0
+    displayName: documentAnalysisClient, document analysis client, polygon, boundingPolygon, begin_analyze_document, v3.0
+    href: how-to-guides/v3-0-sdk-rest-api.md
   - name: Use SDKs or REST API | v2.1
     displayName: formRecognizerClient, form recognizer client, boundingBox, box, begin_recognize, v2.1
     href: how-to-guides/v2-1-sdk-rest-api.md
@@ -146,18 +146,18 @@ items:
   - name: Model overview
     displayName: get started, prebuilt, extraction, input
     href: concept-model-overview.md
-  - name: Form Recognizer Studio | v3.0
+  - name: Form Recognizer Studio 
     href: concept-form-recognizer-studio.md
-  - name: Read OCR model | v3.0
+  - name: Read OCR model
     displayName: text
     href: concept-read.md
-  - name: General document model | v3.0
+  - name: General document model
     displayName: key value pairs, selection marks, structured
     href: concept-general-document.md
   - name: Layout model 
     displayName: tables, selection marks, structure, paragraph roles, text, headers, page numbers
     href: concept-layout.md
-  - name: W-2 form model | v3.0
+  - name: W-2 form model
     displayName: wages, taxes, salary, employees
     href: concept-w2.md
   - name: Invoice model 
