--- a/articles/applied-ai-services/form-recognizer/toc.yml
+++ b/articles/applied-ai-services/form-recognizer/toc.yml
@@ -49,10 +49,10 @@ items:
     href: v3-migration-guide.md
   - name: Use SDKs or REST API | v3.0
     displayName: documentAnalysisClient, document analysis client, polygon, boundingPolygon, begin_analyze_document, v3.0
-    href: how-to-guides/v3-0-sdk-rest-api.md
+    href: how-to-guides/use-sdk-rest-api.md?view=form-recog-3.0.0&preserve-view=true
   - name: Use SDKs or REST API | v2.1
     displayName: formRecognizerClient, form recognizer client, boundingBox, box, begin_recognize, v2.1
-    href: how-to-guides/v2-1-sdk-rest-api.md
+    href: use-sdk-rest-api.md?view=form-recog-2.1.0&preserve-view=true
   - name: Check my usage and estimate the cost
     displayName: price, metrics, dashboard, check, estimate
     href: how-to-guides/estimate-cost.md
