--- a/articles/backup/index.yml
+++ b/articles/backup/index.yml
@@ -77,8 +77,8 @@ landingContent:
             url: backup-azure-security-feature-cloud.md
           - text: Multi-user authorization (MUA)
             url: multi-user-authorization.md
-          - text: SQL Server on Azure VMs restore as files
-            url: restore-sql-database-azure-vm.md#restore-as-files
+          - text: Enhanced soft delete for Azure Backup (preview)
+            url: backup-azure-enhanced-soft-delete-about.md
   # Card
   - title: Back up Azure VMs
     linkLists:
