--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -813,7 +813,7 @@
     - name: Windows
       displayName: Time sync
       href: ./windows/time-sync.md
-    - name: Active Directory Windows Virtual Machines in Azure with External NTP Source
+    - name: Time Mechanism for Active Directory Windows Virtual Machines in Azure
       displayName: Active Directory, Timesync, Windows, NTP
       href: ./windows/external-ntpsource-configuration.md
   - name: Run Command
