--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -605,6 +605,8 @@
           displayName: application development, azure ad, active directory
         - name: Connect with Managed Identity
           href: flexible-server/how-to-connect-with-managed-identity.md
+        - name: Manage AAD users
+          href: flexible-server/how-to-manage-aad-users.md
     - name: Scale a server
       items:
       - name: Azure portal
