--- a/articles/partner-solutions/index.yml
+++ b/articles/partner-solutions/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:Hub
 
 title: Azure Native ISV Services
-summary: Use Azure Native ISV Services to manage seamlessly provision, manage and integrate preferred third party solutions on Azure.
+summary: Use Azure Native ISV Services to seamlessly provision, manage, and integrate preferred third-party solutions on Azure.
 brand: azure ## Used for color theming of icons and hero area
 
 metadata:
   title: Azure Native ISV Services
-  description: Use Azure Native ISV Services to manage seamlessly provision, manage and integrate preferred 3rd party solutions on Azure. 
+  description: Use Azure Native ISV Services to seamlessly provision, manage, and integrate preferred third-party solutions on Azure. 
   author: flang-msft
   ms.topic: hub-page
-  ms.date: 09/24/2022
+  ms.date: 10/10/2022
   ms.author: franlanglois
 
 highlightedContent:
@@ -23,8 +23,8 @@ highlightedContent:
       url: ./partners.md
 
 productDirectory:
-  title: Azure Azure Native ISV Service features
-  summary: Features that enable tight integration with Azure Native ISV Services
+  title: Our Partners
+  summary: 
   items:
     # Card 1
     - title: Elastic
@@ -39,13 +39,13 @@ productDirectory:
         - url: ./datadog/overview.md
           text: A monitoring and analytics platform for large-scale applications
     # Card 3
-    - title: logz.io
+    - title: Logz.io
       imageSrc: ./media/index/logz.io.svg
       links:
         - url: ./logzio/overview.md
           text: Centralizes log, metric, and tracing analytics in one place.
   # Card 4
-    - title: dynatrace
+    - title: Dynatrace
       imageSrc: ./media/index/datadog.svg
       links:
         - url: ./dynatrace/dynatrace-overview.md
