AVD quickstart refresh preview

--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -60,12 +60,12 @@
         - name: Windows App
           displayName: what's new, apps, remote desktop, rdp
           href: /windows-app/whats-new?context=/azure/virtual-desktop/context/context
-- name: Tutorials
+- name: Quickstart
   expanded: true
   items:
     - name: Deploy a sample Windows 11 desktop
-      displayName: tutorial
-      href: tutorial-try-deploy-windows-11-desktop.md
+      displayName: deploy, create, get started, tutorial
+      href: quickstart.md
 - name: Plan
   items:
     - name: Internal and external commercial purposes
@@ -115,9 +115,6 @@
     - name: Deploy Azure Virtual Desktop
       displayName: deploy, create, get started, quickstart, host pool, application group, workspace, assign users, azure stack hci, azure local, azure extended zones
       href: deploy-azure-virtual-desktop.md
-    - name: Quickstart
-      displayName: deploy, create, get started, quickstart
-      href: quickstart.md
     - name: Identity and access management
       items:
         - name: Azure RBAC
@@ -605,9 +602,6 @@
       - name: Host pool creation
         displayName: troubleshooting
         href: troubleshoot-set-up-issues.md
-      - name: Quickstart
-        displayName: troubleshooting
-        href: troubleshoot-quickstart.md
       - name: Session host update
         displayName: troubleshooting, vms
         href: troubleshoot-session-host-update.md
@@ -626,7 +620,7 @@
     - name: Azure Virtual Desktop Agent
       displayName: troubleshooting
       href: troubleshoot-agent.md
-    - name: Remote Desktop service connections
+    - name: Service connections
       displayName: troubleshooting, rdp
       href: troubleshoot-service-connection.md
     - name: Remote Desktop app
