--- a/articles/storage-actions/TOC.yml
+++ b/articles/storage-actions/TOC.yml
@@ -50,7 +50,7 @@ items:
   - name: Resource Manager template
     items:
     - name: Storage task
-      href: /azure/templates/microsoft.microsoft.storageactions/allversions
+      href: /azure/templates/microsoft.storageactions/allversions
     - name: Storage task assignment
       href: /azure/templates/microsoft.storage/storageaccounts/storagetaskassignments
   expanded: true
