--- a/articles/cyclecloud/index.yml
+++ b/articles/cyclecloud/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.topic: landing-page # Required
   author: adriankjohnson
   ms.author: adjohnso
-  ms.date: 08/30/2024
+  ms.date: 01/07/2025
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | sample | tutorial | video | whats-new
 
@@ -45,10 +45,10 @@ landingContent:
     linkLists:            
       - linkListType: whats-new
         links:
-          - text: CycleCloud 8.6.4 is now available
+          - text: CycleCloud 8.7.0 is now available
             url: release-notes.md
           - text: CycleCloud Workspace for Slurm
-            url: release-notes/ccws/2024.09.18.md
+            url: release-notes/ccws/release-notes.md
           - text: Node Health Checks are now supported
             url: how-to/healthcheck.md
           - text: CycleCloud supports Confidential VMs and Trusted Platform Launch for nodes
