--- a/articles/nat-gateway/faq.yml
+++ b/articles/nat-gateway/faq.yml
@@ -205,6 +205,12 @@ sections:
           - To upgrade a basic public IP to standard, see [Upgrade a public IP address](../virtual-network/ip-services/public-ip-upgrade-portal.md).
           - To upgrade a basic public IP with an attached VM to standard, see [Upgrade a basic public IP address with an attached VM](../virtual-network/ip-services/public-ip-upgrade-vm.md).
       
+  - name: Azure NAT Gateway and default outbound access
+    questions:
+      - question: Is there any downtime expected when I add NAT gateway to my subnet where I have default outbound access?
+        answer: |
+          No, there is no downtime when adding NAT gateway to a subnet where default outbound access is being used. After NAT gateway is added to the subnet, all new connections will start using NAT gateway instead of default outbound access. Any existing connections with default outbound access will persist until the connections are closed.
+      
   - name: Connection timeouts and timers
     questions:
       - question: What is the idle timeout for a NAT gateway?
