--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -510,7 +510,7 @@ items:
         href: how-tos/calling-sdk/breakoutrooms.md
       - name: Together Mode
         href: how-tos/calling-sdk/together-mode.md
-      - name: Media Access
+      - name: Media Access Control
         href: how-tos/calling-sdk/media-access.md
     - name: Configuring to proxy traffic
       items:
