adding concept template link

--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -1131,6 +1131,8 @@ items:
         href: concepts/sms/messaging-policy.md
       - name: Pricing
         href: concepts/advanced-messaging/whatsapp/pricing.md
+      - name: Templates
+        href: concepts/advanced-messaging/whatsapp/template-messages.md
       - name: Analytics
         items:
         - name: Metrics
