--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -357,6 +357,8 @@ items:
         href: how-tos/calling-sdk/transfer-calls.md
       - name: Subscribe to SDK events
         href: how-tos/calling-sdk/events.md
+      - name: Enable Real Time Text
+        href: quickstarts/voice-video-calling/get-started-with-real-time-text.md
       - name: Enable Closed captions
         href: quickstarts/voice-video-calling/get-started-with-closed-captions.md
       - name: Enable Closed captions for Teams Interoperability
