--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -275,6 +275,10 @@
             - name: Use Azure CLI
               displayName: automatic device management
               href: iot-hub-automatic-device-management-cli.md
+        - name: Schedule bulk operations with jobs
+          displayName: jobs, CLI
+          href: schedule-jobs-cli.md
+
         - name: Regenerate keys
           href: regenerate-keys.md
     - name: Develop
@@ -296,9 +300,6 @@
           href: how-to-device-management.md
         - name: Schedule and broadcast jobs
           items:
-            - name: CLI
-              displayName: jobs
-              href: schedule-jobs-cli.md
             - name: .NET
               displayName: jobs, csharp, C#
               href: schedule-jobs-dotnet.md
