--- a/articles/partner-solutions/new-relic/toc.yml
+++ b/articles/partner-solutions/new-relic/toc.yml
@@ -11,7 +11,7 @@ items:
   - name: Create a New Relic resource
     href: create.md
   - name: Link to an existing New Relic account
-    href: link-to-existing-resources.md
+    href: link-existing-resources.md
 - name: How to
   items:
   - name: Configure prerequisites
