--- a/articles/container-apps/faq.yml
+++ b/articles/container-apps/faq.yml
@@ -111,7 +111,7 @@ sections:
           You can submit a feature request via the [Azure Container Apps GitHub repository](https://github.com/microsoft/azure-container-apps/issues/new/choose). Make sure to include "Dapr" in the feature request title.
 
       - question: |
-          Why do I see `-msft.<number>` version in my Container App Environment?
+          Why do I see "-msft.<number>" version in my Container App Environment?
         answer: |
           As `1.13.6-msft.1` is rolled out across production regions, you may still see earlier versions (like `1.12.5` or `1.12.5-msft.6`). The `-msft.<number>` suffix indicates the specific customizations made for Azure Container Apps to enhance your experience.
 
