--- a/articles/partner-solutions/new-relic/index.yml
+++ b/articles/partner-solutions/new-relic/index.yml
@@ -33,10 +33,8 @@ landingContent:
     linkLists:
       - linkListType: quickstart
         links:
-          - text: Create a new resource
+          - text: Create a resource
             url: create.md
-          - text: Link to an existing New Relic account
-            url: link-to-existing-resource.md
       - linkListType: how-to-guide
         links:
           - text: Troubleshoot a resource
