--- a/articles/partner-solutions/new-relic/index.yml
+++ b/articles/partner-solutions/new-relic/index.yml
@@ -23,7 +23,7 @@ landingContent:
             url: overview.md
       - linkListType: how-to-guide
         links:
-          - text: Manage a resource by using the portal
+          - text: Manage a resource
             url: manage.md
 
   # Card
@@ -39,20 +39,20 @@ landingContent:
             url: troubleshoot.md
 
   # Card
-  # - title: Explore reference content
-  #   linkLists:
-  #     - linkListType: reference
-  #       links:
-  #         - text: Python
-  #           url: /python/api/overview/azure/new-relic
-  #         - text: JavaScript
-  #           url: /javascript/api/overview/azure/new-relic
-  #         - text: .NET
-  #           url: /dotnet/api/overview/azure/new-relic
-  #         - text: Java
-  #           url: /java/api/overview/azure/new-relic
-  #         - text: REST API
-  #           url: /rest/api/new-relic
-#          - text: Azure PowerShell
-#            url: 
-          
+  - title: Explore reference content
+    linkLists:
+      - linkListType: reference
+        links:
+        - text: Python
+          url: /python/api/overview/azure/new-relic
+        - text: JavaScript
+          url: /javascript/api/overview/azure/new-relic
+        - text: .NET
+          url: /dotnet/api/overview/azure/new-relic
+        - text: Java
+          url: /java/api/overview/azure/new-relic
+        - text: REST API
+          url: /rest/api/new-relic
+        - text: Azure PowerShell
+          url: /powershell/module/az.newrelic/
+
