--- a/articles/partner-solutions/datadog/index.yml
+++ b/articles/partner-solutions/datadog/index.yml
@@ -19,21 +19,21 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-          - text: What is Datadog
+          - text: What is Datadog?
             url: overview.md
       - linkListType: how-to-guide
         links:
-          - text: Manage the Datadog resource
+          - text: Manage your Datadog resource
             url: manage.md
 
   # Card
-  - title: Create Datadog resource
+  - title: Create a Datadog resource
     linkLists:
       - linkListType: quickstart
         links:
           - text: Get started with Datadog by creating a new instance
             url: create.md
-          - text: Link to existing Datadog organization
+          - text: Link to an existing Datadog organization
             url: link-to-existing-organization.md
       - linkListType: how-to-guide
         links:
