--- a/articles/partner-solutions/new-relic/index.yml
+++ b/articles/partner-solutions/new-relic/index.yml
@@ -36,21 +36,21 @@ landingContent:
           - text: Troubleshoot a resource
             url: troubleshoot.md
 
-  # Card
-  - title: Explore reference content
-    linkLists:
-      - linkListType: reference
-        links:
-        - text: Python
-          url: /python/api/overview/azure/new-relic
-        - text: JavaScript
-          url: /javascript/api/overview/azure/new-relic
-        - text: .NET
-          url: /dotnet/api/overview/azure/new-relic
-        - text: Java
-          url: /java/api/overview/azure/new-relic
-        - text: REST API
-          url: /rest/api/new-relic
-        - text: Azure PowerShell
-          url: /powershell/module/az.newrelic/
+ #  # Card
+ # - title: Explore reference content
+ #   linkLists:
+ #     - linkListType: reference
+ #       links:
+ #       - text: Python
+ #         url: /python/api/overview/azure/new-relic
+ #       - text: JavaScript
+ #         url: /javascript/api/overview/azure/new-relic
+ #       - text: .NET
+ #         url: /dotnet/api/overview/azure/new-relic
+ #       - text: Java
+ #         url: /java/api/overview/azure/new-relic
+ #       - text: REST API
+ #         url: /rest/api/new-relic
+ #       - text: Azure PowerShell
+ #         url: /powershell/module/az.newrelic/
 
