--- a/articles/container-apps/faq.yml
+++ b/articles/container-apps/faq.yml
@@ -100,11 +100,6 @@ sections:
           While Tier 1 components are fully supported, Tier 2 components are supported with best effort. [Learn more.](./dapr-overview.md#supported-dapr-apis-components-and-tooling)
 
       - question: |
-          What is the Dapr version release cadence in Azure Container Apps?
-        answer: |
-          Dapr's typical release timeline is up to six weeks after [the Dapr OSS release](https://docs.dapr.io/operations/support/support-release-policy/). The latest Dapr version is made available in Azure Container Apps only after rigorous testing. Rolling out to all regions can take up to two weeks or longer. 
-
-      - question: |
           How can I request a Dapr feature enhancement for Azure Container Apps?
         answer:
 
@@ -113,7 +108,7 @@ sections:
       - question: |
           Why do I see "-msft.<number>" version in my Container App Environment?
         answer: |
-          As `1.13.6-msft.1` is rolled out across production regions, you may still see earlier versions (like `1.12.5` or `1.12.5-msft.6`). The `-msft.<number>` suffix indicates the specific customizations made for Azure Container Apps to enhance your experience.
+          As `1.13.6-msft.1` is being rolled out across production regions, you may still see earlier versions (like `1.12.5` or `1.12.5-msft.6`). The `-msft.<number>` suffix indicates the specific customizations made for Azure Container Apps to enhance your experience.
 
       - question: |
           How often are Dapr versions released for Azure Container Apps?
