--- a/articles/deployment-environments/index.yml
+++ b/articles/deployment-environments/index.yml
@@ -65,9 +65,9 @@ landingContent:
           - text: Create an ARM or Bicep custom image
             url: /azure/deployment-environments/how-to-configure-extensibility-model-custom-image?tabs=sample%2Cprivate-registry&pivots=arm-bicep
           - text: Create a Terraform custom image
-            url: /azure/deployment-environments/how-to-configure-extensibility-model-custom-image?tabs=custom-script%2Cprivate-registry&pivots=terraform#use-a-standard-container-image
+            url: /azure/deployment-environments/how-to-configure-extensibility-model-custom-image?tabs=custom-script%2Cprivate-registry&pivots=terraform
           - text: Create a Pulumi custom image
-            url: /azure/deployment-environments/how-to-configure-extensibility-model-custom-image?tabs=sample%2Cprivate-registry&pivots=pulumi#use-a-standard-container-image
+            url: /azure/deployment-environments/how-to-configure-extensibility-model-custom-image?tabs=sample%2Cprivate-registry&pivots=pulumi
           - text: Troubleshoot custom image errors and warnings
             url: troubleshoot-custom-image-logs-errors.md  
 
