--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -173,6 +173,8 @@
         href: manage/programmatically-create-subscription-enterprise-agreement.md
       - name: Create MCA subscriptions programmatically
         href: manage/programmatically-create-subscription-microsoft-customer-agreement.md
+      - name: Create MCA subscriptions programmatically across associated tenants
+        href: manage/programmatically-create-customer-agreement-associated-billing-tenants.md
       - name: Create MCA subscriptions programmatically across tenants
         href: manage/programmatically-create-subscription-microsoft-customer-agreement-across-tenants.md
       - name: Create MPA subscriptions programmatically
