init commit for storage-quickstart-blobs-java-quarkus.md
Signed-off-by: Jianguo Ma <jiangma@microsoft.com>

--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -38,6 +38,8 @@ items:
         href: storage-quickstart-blobs-java.md
       - name: Spring
         href: /azure/developer/java/spring-framework/configure-spring-boot-starter-java-app-with-azure-storage?toc=/azure/storage/blobs/toc.json
+      - name: Quarkus
+        href: storage-quickstart-blobs-java-quarkus.md
     - name: Python
       href: storage-quickstart-blobs-python.md
     - name: JavaScript
