--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -596,33 +596,33 @@
 - name: Troubleshoot
   items:
     - name: Troubleshooting overview, feedback, and support
-      href: troubleshoot-set-up-overview.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-set-up-overview?context=/azure/virtual-desktop/context/context
     - name: Host pools and session hosts
       items:
       - name: Host pool creation
         displayName: troubleshooting
-        href: troubleshoot-set-up-issues.md
+        href: /troubleshoot/azure/virtual-desktop/troubleshoot-set-up-issues?context=/azure/virtual-desktop/context/context
       - name: Session host update
         displayName: troubleshooting, vms
-        href: troubleshoot-session-host-update.md
+        href: /troubleshoot/azure/virtual-desktop/troubleshoot-session-host-configuration-update?context=/azure/virtual-desktop/context/context
       - name: Session host virtual machine configuration
         displayName: troubleshooting, vms
-        href: troubleshoot-vm-configuration.md
+        href: /troubleshoot/azure/virtual-desktop/troubleshoot-vm-configuration?context=/azure/virtual-desktop/context/context
       - name: Session host statuses and health checks
         displayName: troubleshooting
         href: troubleshoot-statuses-checks.md
     - name: Management issues
       displayName: troubleshooting
-      href: troubleshoot-management-issues.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-management-issues?context=/azure/virtual-desktop/context/context
     - name: Azure Virtual Desktop PowerShell
       displayName: troubleshooting, command line
-      href: troubleshoot-powershell.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-powershell?context=/azure/virtual-desktop/context/context
     - name: Azure Virtual Desktop Agent
       displayName: troubleshooting
-      href: troubleshoot-agent.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-agent?context=/azure/virtual-desktop/context/context
     - name: Service connections
       displayName: troubleshooting, rdp
-      href: troubleshoot-service-connection.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-service-connection?context=/azure/virtual-desktop/context/context
     - name: Remote Desktop app
       items:
         - name: Windows Desktop client basic troubleshooting
@@ -654,34 +654,34 @@
       href: remotefx-graphics-performance-counters.md
     - name: Connections to Microsoft Entra joined VMs
       displayName: troubleshooting, identity
-      href: troubleshoot-azure-ad-connections.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-azure-ad-connections?context=/azure/virtual-desktop/context/context
     - name: Device redirections
       displayName: troubleshooting, rdp apps, clients
-      href: troubleshoot-device-redirections.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-device-redirections?context=/azure/virtual-desktop/context/context
     - name: Azure Virtual Desktop Insights
       displayName: troubleshooting, avd insights, avdi
-      href: troubleshoot-insights.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-insights?context=/azure/virtual-desktop/context/context
     - name: Azure Files authorization
       displayName: troubleshooting
-      href: troubleshoot-authorization.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-authorization?context=/azure/virtual-desktop/context/context
     - name: Connection quality issues
       displayName: troubleshooting, network, monitoring
-      href: troubleshoot-connection-quality.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-connection-quality?context=/azure/virtual-desktop/context/context
     - name: RDP Shortpath
       displayName: troubleshooting, network, udp
-      href: troubleshoot-rdp-shortpath.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-rdp-shortpath?context=/azure/virtual-desktop/context/context
     - name: Multimedia redirection
       displayName: troubleshooting, mmr
-      href: troubleshoot-multimedia-redirection.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-multimedia-redirection?context=/azure/virtual-desktop/context/context
     - name: Microsoft Teams
       displayName: troubleshooting
       href: troubleshoot-teams.md
     - name: Custom image templates
       displayName: troubleshooting, virtual machines, vms, images, vhd, vhdx
-      href: troubleshoot-custom-image-templates.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-custom-image-templates?context=/azure/virtual-desktop/context/context
     - name: App attach
       displayName: troubleshooting, apps, remoteapp
-      href: troubleshoot-app-attach.md
+      href: /troubleshoot/azure/virtual-desktop/troubleshoot-app-attach?context=/azure/virtual-desktop/context/context
 - name: Reference
   items:
     - name: Azure CLI
