--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -212,6 +212,8 @@
           href: point-to-site-entra-gateway.md
         - name: Configure P2S - manually registered VPN client
           href: virtual-wan-point-to-site-azure-ad.md
+        - name: Create or modify custom audience app ID
+          href: point-to-site-entra-register-custom-app.md
         - name: Configure a tenant
           href: openvpn-azure-ad-tenant.md
         - name: Configure multifactor authentication (MFA)
