--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -299,19 +299,8 @@
           displayName: device management, status updates, device maintenance windows
           href: how-to-device-management.md
         - name: Schedule and broadcast jobs
-          items:
-            - name: .NET
-              displayName: jobs, csharp, C#
-              href: schedule-jobs-dotnet.md
-            - name: Python
-              displayName: jobs
-              href: schedule-jobs-python.md
-            - name: Node.js
-              displayName: jobs
-              href: schedule-jobs-node.md
-            - name: Java
-              displayName: jobs
-              href: schedule-jobs-java.md
+          displayName: schedule jobs
+          href: how-to-schedule-broadcast-jobs.md
         - name: Query Avro data from a hub route
           displayName: Azure Data Lake, U-SQL
           href: iot-hub-query-avro-data.md
